@@ -1,16 +1,22 @@
 package rafalwisnia.AstarSearchAlgorithm;
 
+import rafalwisnia.Entity.Entity;
+import rafalwisnia.Entity.Pacmann;
+import rafalwisnia.LevelUtilities.Board;
+
 import java.util.LinkedList;
 import java.util.List;
+import java.util.function.DoubleBinaryOperator;
 
 public class PathFinder extends AStar<PathFinder.Node> {
     private int[][] map;
-
+    private Entity pacman;
+    private Board board;
     public static class Node {
         public int x;
         public int y;
 
-        Node(int x, int y) {
+        public  Node(int x, int y) {
             this.x = x;
             this.y = y;
         }
@@ -20,12 +26,29 @@ public class PathFinder extends AStar<PathFinder.Node> {
         }
     }
 
-    public PathFinder(int[][] map) {
-        this.map = map;
+    @Override
+    public void getMap() {
+        for(int i=0;i<14;i++){
+            for(int j=0;j<20;j++){
+                this.tempMap[j][i]=map[j][i];
+            }
+        }
+    }
+
+    public PathFinder(int[][] map, Entity pacman, Board board) {
+        this.map = new int [20][14];
+        for(int i=0;i<14;i++){
+            for(int j=0;j<20;j++){
+             this.map[j][i]=map[i][j];
+            }
+        }
+        this.pacman =pacman;
+        this.board = board;
     }
 
     protected boolean isGoal(Node node) {
-        return (node.x == map[0].length - 1) && (node.y == map.length - 1);
+        int coordinates[] = board.getTileWhereAmI(pacman.getX(),pacman.getY());
+        return (node.x == coordinates[1]) && (node.y ==coordinates[0]);
     }
 
     protected Double g(Node from, Node to) {
@@ -33,27 +56,40 @@ public class PathFinder extends AStar<PathFinder.Node> {
         if (from.x == to.x && from.y == to.y)
             return 0.0;
 
-        if (map[to.y][to.x] == 1)
+        if (map[to.x][to.y] == 0)
             return 1.0;
 
         return Double.MAX_VALUE;
     }
 
     protected Double h(Node from, Node to) {
+
         /* Use the Manhattan distance heuristic.  */
-        return new Double((map[0].length - 1 - to.x) + Math.abs(map.length - 1 - to.y));
+          return Double.valueOf((Math.abs(from.x - to.x) + Math.abs(from.y - to.y)));
     }
 
     protected List<Node> generateSuccessors(Node node) {
         List<Node> ret = new LinkedList<Node>();
         int x = node.x;
         int y = node.y;
-        if (y < map.length - 1 && map[y + 1][x] == 1)
-            ret.add(new Node(x, y + 1));
-
-        if (x < map[0].length - 1 && map[y][x + 1] == 1)
-            ret.add(new Node(x + 1, y));
-
+        if(y>0&& y<14 &&x>0&&x<20) {
+            if ( tempMap[x][y + 1] == 0) {
+                ret.add(new Node(x, y + 1));
+                tempMap[x][y] = 1;
+            }
+            if ( tempMap[x + 1][y] == 0) {
+                ret.add(new Node(x + 1, y));
+                tempMap[x][y] = 1;
+            }
+            if ( tempMap[x][y - 1] == 0) {
+                ret.add(new Node(x, y - 1));
+                tempMap[x][y] = 1;
+            }
+            if ( tempMap[x - 1][y] == 0) {
+                ret.add(new Node(x - 1, y));
+                tempMap[x][y] = 1;
+            }
+        }
         return ret;
     }
 }
